--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,10 @@
         "name": "Claudinei Perboni",
         "email": "cperbony@gmail.com"
     }],
-    "require": {},
+    "require": {
+        "pimple/pimple": "^3.2",
+        "symfony/http-foundation": "^4.1"
+    },
     "autoload": {
         "psr-4": {
             "CAP\\Framework\\": "src",
